--- a/landing-seguros.html
+++ b/landing-seguros.html
@@ -312,7 +312,7 @@
                         <li><a href="/privacidad">Política de Privacidad</a></li>
                         <li><a href="/terminos">Términos de Uso</a></li>
                         <li><a href="/sms-terms">Términos de SMS</a></li>
-                        <li><a href="#disclaimer">Disclaimer</a></li>
+                        <a href="disclaimer.html">Disclaimer</a>
                     </ul>
                 </div>
                 
