fix: Correct legal page links to use absolute paths
FIXES:
1. Legal Links (404 Error Prevention)
   - Updated all privacy policy links: /privacidad.html
   - Updated all terms links: /terminos.html
   - Applied absolute paths across all 3 pages

CHANGES:
- index.html: Footer legal links corrected
- landing-seguros.html: Footer legal links corrected
- gracias.html: Privacy link + footer legal links corrected

VERIFICATION:
✓ All legal links now use absolute paths
✓ Links work from any page (index, landing, gracias)
✓ No 404 errors expected
✓ No other code modified

FILES CHANGED: 3
LINES CHANGED: 7 links updated

--- a/gracias.html
+++ b/gracias.html
@@ -241,7 +241,7 @@
                     </div>
                     
                     <div class="privacy-link">
-                        <a href="privacidad.html" target="_blank">
+                        <a href="/privacidad.html" target="_blank">
                             <i class="fas fa-external-link-alt"></i>
                             Ver Política de Privacidad
                         </a>
@@ -324,8 +324,8 @@
                 <div class="footer-section">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="privacidad.html">Política de Privacidad</a></li>
-                        <li><a href="terminos.html">Términos de Uso</a></li>
+                        <li><a href="/privacidad.html">Política de Privacidad</a></li>
+                        <li><a href="/terminos.html">Términos de Uso</a></li>
                     </ul>
                 </div>
             </div>
