--- a/landing-seguros.html
+++ b/landing-seguros.html
@@ -246,8 +246,8 @@
                 <div class="footer-section">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="/privacidad">Política de Privacidad</a></li>
-                        <li><a href="/terminos">Términos de Uso</a></li>
+                        <li><a href="/privacidad.html">Política de Privacidad</a></li>
+                        <li><a href="/terminos.html">Términos de Uso</a></li>
                         <li><a href="disclaimer.html">Disclaimer</a></li>
                     </ul>
                 </div>
