--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
                 <div class="footer-section">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="privacidad.html">Política de Privacidad</a></li>
-                        <li><a href="terminos.html">Términos de Uso</a></li>
+                        <li><a href="/privacidad.html">Política de Privacidad</a></li>
+                        <li><a href="/terminos.html">Términos de Uso</a></li>
                     </ul>
                 </div>
                 
